# rebecca

./: .gitignore  Cargo.toml  LICENSE  README.md  release.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
adr/: .adr-system.yaml  README.md  _template.md  index.yaml
crates/rebecca-cli/: Cargo.toml
crates/rebecca-cli/src/: main.rs
crates/rebecca-cli/tests/: actions.rs  observation.rs  status.rs
crates/rebecca-protocol/: Cargo.toml
docs/: macos-distribution.md
fixture/: Info.plist
fixture/Sources/: main.swift
homebrew-cask/: rebecca.rb
host/: Info.plist  Rebecca.entitlements
host/Sources/: ActionSupport.swift  AppMain.swift  AppSupport.swift  AuditLogSupport.swift  CGEventSupport.swift  CaptureSupport.swift  DisplayRevision.swift  DisplaySupport.swift  FocusSupport.swift  PermissionState.swift  ShareableContentSupport.swift  SocketSupport.swift  StatusWindow.swift  TreeSupport.swift  WindowControlSupport.swift  WindowSupport.swift
host/Tests/: CaptureSupportTests.swift  DisplayRevisionTests.swift  PermissionStateTests.swift  SocketSupportTests.swift  StatusWindowTests.swift
macos/: Info.plist  project.yml
macos/Rebecca.xcodeproj/: project.pbxproj
macos/rebecca-icon.icon/: icon.json
resources/: SKILL.md
schemas/: protocol-v1.json
scripts/: build-app.sh  build-fixture.sh  build-macos-app.sh  next-release-version.sh  render-homebrew-cask.sh  setup-signing.sh  test-displays-app.sh  test-host.sh  test-m1-acceptance.sh  test-m2-acceptance.sh  test-release-automation.sh  test-windows-capture-app.sh  verify-macos-app.sh
(+7 files in other folders)
