[package]
name = "rebecca-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rebecca"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rebecca-protocol = { path = "../rebecca-protocol" }
serde = { workspace = true }
serde_json.workspace = true
uuid = { version = "1", features = ["v4"] }
